name:                complex

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            A simple representation of complex numbers in Haskell.

description:         A complex number type family implemented in Haskell, complete with instance declarations for Num, Fractional, and Floating. This includes extensions to arithmetic operators, exponential and logarithmic functions, and trigonometric functions (standard, hyperbolic, and their inverses). Also includes some functions unique to complex numbers, like the argument function and polar representation.

homepage:            https://github.com/greatBigDot/Complex.git

license:             PublicDomain

author:              greatBigDot

maintainer:          figueroa.johnm@gmail.com

category:            Math

build-type:          Simple

extra-source-files:  ChangeLog.md, README.md

cabal-version:       >=1.10


library
  exposed-modules:     Data.Complex
  
  -- other-modules:       
  
  -- other-extensions:    
  
  build-depends:       base >=4.9 && <4.10
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  default-language:    Haskell2010
